# rust-alert

./: .env  Cargo.toml  LICENSE  README.md  my_db.db3
my_db/: db  snap.0000000000000074
src/: alert.rs  consumer.rs  db_config.rs  entities.rs  main.rs
src/db/: mod.rs
src/trigger/: trigger.rs  types.rs
