[package]
name = "alert-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.1.6"
serde = { version = "1.0", features= ["derive"]}
serde_json = "1"
chrono = { version = "0.4", features= ["serde"]}
sea-orm = { version = "0.5.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"], default_features = false}
tokio = {version = "1", features=["full"]}