[package]
name = "alert-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features= ["derive"]}
serde_json = "1"
chrono = { version = "0.4", features= ["serde"]}
dotenv = "0.15.0"
tokio = {version = "1", features=["full"]}
fallible-iterator = "0.2.0"
iced = "0.3.0"
[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]